Bug 149388 - deleting 'the' tracks the change as 'moved (deletion)'
Summary: deleting 'the' tracks the change as 'moved (deletion)'
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.1
Keywords: regression
: 151824 160993 (view as bug list)
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2022-05-30 23:35 UTC by Justin
Modified: 2024-05-24 03:38 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
pic showing bogus tag (66.46 KB, image/png)
2022-05-30 23:36 UTC, Justin
Details
doc snippet (12.01 KB, application/zip)
2022-05-30 23:36 UTC, Justin
Details
another example except with 'of' (7.45 KB, image/png)
2022-06-01 01:25 UTC, Justin
Details
another super example with THE (69.24 KB, image/png)
2022-06-11 21:28 UTC, Justin
Details
delete - insert very far apart (315.00 KB, image/png)
2022-06-11 22:25 UTC, Justin
Details
two diff actions on one word (1.43 KB, image/png)
2022-07-02 19:20 UTC, Justin
Details
a similar anomaly of inconsistency (10.83 KB, image/png)
2022-07-02 20:08 UTC, Justin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin 2022-05-30 23:35:50 UTC
Description:
deleting the word 'the' tracks the change as 'moved (deletion)'

Steps to Reproduce:
1. open "move insertion p7.docx"
2. toggle on "Record Track Changes"
3. double-click one of the occurrences of "the"
4. press Delete key

Actual Results:
the text is marked green with double-strike thru, indicating 'moved (deletion)'

Expected Results:
should be the yellow single strike thru of simply being deleted


Reproducible: Always


User Profile Reset: No



Additional Info:
I can't upload the entire document.  True, you can remove the second 'moved (deletion)' and the first one won't happen, but there is no connection even to the second one and neither should have ever happened.  (notice there are multiple paragraph marks between them)  Now in this document whenever any "the" is deleted I get the 'moved (deletion)' tag.
Comment 1 Justin 2022-05-30 23:36:16 UTC
Created attachment 180482 [details]
pic showing bogus tag
Comment 2 Justin 2022-05-30 23:36:31 UTC
Created attachment 180483 [details]
doc snippet
Comment 3 Justin 2022-06-01 01:25:08 UTC
Created attachment 180511 [details]
another example except with 'of'

This time the word "of" is being accused of moving.  I added "of a" at one and the same time.  I didn't move anything.
Comment 4 Justin 2022-06-11 21:28:57 UTC
Created attachment 180678 [details]
another super example with THE

The first one "A" looked normal until I added the second one "B".  This might make logical sense, but I didn't actually 'move insert'.  Even the second pair might make sense, but look at the last one - it is marked as 'move insert' but with no prior delete!
Comment 5 Justin 2022-06-11 22:25:18 UTC
Created attachment 180679 [details]
delete - insert very far apart

The first "of" I deleted, then several sentences and one paragraph later, I added an "of" but it is marked as 'move inserted'.  I don't think so.  No logic in that.
Comment 6 Dieter 2022-06-27 06:00:27 UTC
(In reply to Justin from comment #0)
> Description:
> deleting the word 'the' tracks the change as 'moved (deletion)'
> 
> Steps to Reproduce:
> 1. open "move insertion p7.docx"
> 2. toggle on "Record Track Changes"
> 3. double-click one of the occurrences of "the"
> 4. press Delete key
> 
> Actual Results:
> the text is marked green with double-strike thru, indicating 'moved
> (deletion)'

I can't confirm with

Version: 7.3.4.2 (x64) / LibreOffice Community
Build ID: 728fec16bd5f605073805c3c9e7c4212a0120dc5
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Try to work in Safe Mode: Help => Restart in Safe Mode. If this works, the problem is related corruption of your user profile and you should reset your Libreoffice profile (https://wiki.documentfoundation.org/UserProfile)

I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' if the issue is still present.
Comment 7 Justin 2022-07-02 19:20:34 UTC
Created attachment 181092 [details]
two diff actions on one word

How could this ever make sense - two diff actions on one word.
Comment 8 Justin 2022-07-02 19:48:53 UTC
I tried with Version: 7.3.4.2 (x64) on another computer.
I opened the DOCX I've been working on:
a) Nothing changed after open - the errors persisted.
b) I 'rejected' some of the changes then recreated the change - this time the error did not happen (got the correct answer).
c) I made a new edit and the error happened (shows as move deletion instead of just add).  (Same thing happened in the reported version.)

I'm even seeing a new problem:  I add a word and a space - the word shows as move deletion but the space shows as replace (gold).  The reported version shows the space correctly as added (blue).
Comment 9 Justin 2022-07-02 20:08:25 UTC
Created attachment 181093 [details]
a similar anomaly of inconsistency

Another inconsistency - replace of the first letter of a word is not consistent.
Comment 10 Telesto 2022-07-03 01:40:47 UTC
(In reply to Justin from comment #9)
> Created attachment 181093 [details]
> a similar anomaly of inconsistency
> 
> Another inconsistency - replace of the first letter of a word is not
> consistent.

I confirm this..
1. Open attachment 180483 [details]
2. Select the 's' of six in the first line
3. Type S
4. Select the w of ways on the first line, next to six
5. Press backspace
6. Type W. 

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 7a89eae97a970939174d59aa58147eaa194acaee
CPU threads: 8; OS: Mac OS X 12.3.1; UI render: Skia/Raster; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 11 Telesto 2022-07-03 01:51:12 UTC
Related to comment 0
1. Open attachment 180483 [details]
2. Select the in the first line
3. CTRL+X
4. CTRL+V 
5. Select the in the second line and hit backspace

-> confirm
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 7a89eae97a970939174d59aa58147eaa194acaee
CPU threads: 8; OS: Mac OS X 12.3.1; UI render: Skia/Raster; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 12 Telesto 2022-07-04 18:49:08 UTC
(In reply to Telesto from comment #11)
> Related to comment 0
> 1. Open attachment 180483 [details]
> 2. Select the in the first line
> 3. CTRL+X
> 4. CTRL+V 
> 5. Select the in the second line and hit backspace
> 
> -> confirm
> Version: 7.5.0.0.alpha0+ / LibreOffice Community
> Build ID: 7a89eae97a970939174d59aa58147eaa194acaee
> CPU threads: 8; OS: Mac OS X 12.3.1; UI render: Skia/Raster; VCL: osx
> Locale: nl-NL (nl_NL.UTF-8); UI: en-US
> Calc: threaded

Still OK in
Version: 7.1.8.0.0+ (x64) / LibreOffice Community
Build ID: a94b58277c7aeaa83ce14347cd0b8f7137969d03
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 13 Telesto 2022-07-04 18:49:45 UTC Comment hidden (off-topic)
Comment 14 Commit Notification 2022-08-04 13:17:00 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cca71aa4c5b79302a4f30c5ab5582da2b9d378e8

tdf#149388 sw: add better limit to detect tracked text moving

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 László Németh 2022-08-04 13:17:59 UTC
commit description:

tdf#149388 sw: add better limit to detect tracked text moving

Detection of tracked text moving needs at least 6 characters
with an inner space after stripping white spaces of its redline.
This way frequent deletion and insertion of articles or other
common word parts, e.g. 'the' and 'of a' won't detected as
text moving by mistake.

Note: to still detect their redlines, as text moving,
update test document of testTdf145719 to contain
moved text "dolor sit" instead of "dolor", also
testRedlineMoving to move list item "An ItemIt"
instead of "It", and add testTdf149388 with test
document of the original testTdf132371, where redline
containing "Third" is not detected as text moving,
unlike the new test document of the new testTdf132371,
which contains "Third etc." (at least 6 character
text with at least an inner space).
Comment 16 Commit Notification 2022-08-19 06:02:01 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/7d410442ad6d04a3da71d8b0f6ceca6e5e30adbf

tdf#149388 sw: add better limit to detect tracked text moving

It will be available in 7.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 stragu 2024-05-24 02:13:54 UTC
*** Bug 160993 has been marked as a duplicate of this bug. ***
Comment 18 stragu 2024-05-24 02:18:15 UTC
*** Bug 151824 has been marked as a duplicate of this bug. ***
Comment 19 stragu 2024-05-24 02:20:12 UTC
Verified in:

Version: 24.2.3.2 (X86_64) / LibreOffice Community
Build ID: 433d9c2ded56988e8a90e6b2e771ee4e6a5ab2ba
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded