tdf#149388 sw: add better limit to detect tracked text moving

Detection of tracked text moving needs at least 6 characters
with an inner space after stripping white spaces of its redline.
This way frequent deletion and insertion of articles or other
common word parts, e.g. 'the' and 'of a' won't detected as
text moving by mistake.

Note: to still detect their redlines, as text moving,
update test document of testTdf145719 to contain
moved text "dolor sit" instead of "dolor", also
testRedlineMoving to move list item "An ItemIt"
instead of "It", and add testTdf149388 with test
document of the original testTdf132371, where redline
containing "Third" is not detected as text moving,
unlike the new test document of the new testTdf132371,
which contains "Third etc." (at least 6 character
text with at least an inner space).

Change-Id: I7f24fadebe2e21ae303677f74001dbc2d2ad87a1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137749
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 4b885c30c292f4a08983630cb140e16a437cc63d)